Using cdn instead of modules

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
             rel="stylesheet"
         />
         <link
-            type="text/css"
             rel="stylesheet"
-            href="node_modules/lightgallery/css/lightgallery-bundle.min.css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/css/lightgallery-bundle.min.css"
+            integrity="sha512-nUqPe0+ak577sKSMThGcKJauRI7ENhKC2FQAOOmdyCYSrUh0GnwLsZNYqwilpMmplN+3nO3zso8CWUgu33BDag=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
         />
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/vimeo-player/2.13.0/player.min.js"
@@ -116,8 +118,18 @@
             </a>
         </div>
         <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
-        <script src="node_modules/lightgallery/lightgallery.min.js"></script>
-        <script src="node_modules/lightgallery/plugins/video/lg-video.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/lightgallery.min.js"
+            integrity="sha512-dSI4QnNeaXiNEjX2N8bkb16B7aMu/8SI5/rE6NIa3Hr/HnWUO+EAZpizN2JQJrXuvU7z0HTgpBVk/sfGd0oW+w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/plugins/video/lg-video.min.js"
+            integrity="sha512-mjdf6tU1Mksu9Hq2YXfbxdzzYHU7SJYmAsMnrhBf80SkHFvk6eHa2d79JM0q5w5ft5nQyBQ0EMB+XTmnvhcFgA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
         <script>
             function handleClick() {
                 const clickedVideoSrc = event.currentTarget.dataset.video;
